<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Marketing</string>
    <string name="app_version">2.0</string>
	 <string name="gen_version">3.000</string>
      <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
     <color name="titlebackgroundcolor">#3232CD</color>
    <color name="titletextcolor">#FFFF00</color>
    <color name="custom_theme_color">#b0b0ff</color>
    <color name="backgroundColor">#FFFFFF</color>
     <string name="spinner_title">Select Query</string>
   <item type="id" name="TYPE_TAG_KEY">0</item>
   <item type="id" name="REQUIRED_TAG_KEY">1</item>
    <string name="username">UserName</string>
     <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="email">Email Id</string>
    <string name="app_name">Login Widget</string>
    <string name="signin_button">Sign in</string>
    <string name="register_button">Register now</string>
     <string name="login_screen">Login</string>
<style name="CustomTheme" parent="android:Theme.Light">
    <item name="android:windowBackground">@color/custom_theme_color</item>
    <item name="android:colorBackground">@color/custom_theme_color</item>
</style>

<color name="custom_theme_color1">#bbb0ff</color>
<style name="CustomTheme1" parent="android:Theme.Light">
    <item name="android:windowBackground">@color/custom_theme_color1</item>
    <item name="android:colorBackground">@color/custom_theme_color1</item>
    <item name="android:listViewStyle">@style/MyListView</item>
</style>

<style name="MyListView" parent="@android:style/Widget.ListView">
    <item name="android:background">@color/titlebackgroundcolor</item>
  </style>
</resources>
