<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/login_welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@drawable/green"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/login_screen"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_welcome"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/full_name"
        android:inputType="text"
        android:text=""
        android:visibility="gone" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullName"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:text="" />

    <EditText
        android:id="@+id/pswd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uname"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pswd"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text=""
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/medium_btn_style"
             android:minHeight="64dp"
            android:minWidth="230dp"
            android:onClick="onSignInClicked"
            android:text="@string/signin_button"
            android:textColor="#f5f5f5" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/medium_btn_style"
            android:minHeight="64dp"
            android:minWidth="230dp"
            android:onClick="onRegisterClicked"
            android:text="@string/register_button"
            android:textColor="#f5f5f5"
            android:visibility="gone" />
         <TextView
            android:id="@+id/current_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:onClick="showRegistrationScreen"
            android:text="New User? Register here"
            android:textColor="#0b84aa"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/current_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:onClick="showLoginScreen"
            android:text="Already registered! Login here"
            android:textColor="#0b84aa"
            android:textSize="20dip"
            android:visibility="gone" />
    </LinearLayout>

   

</RelativeLayout>